I changed the formatting to look more aesthetic

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
-  
-  <body>
-  
-      <h3> Cameron's Portfolio </h3>
+   <h3> Cameron's Portfolio </h3>
         <p> AP Computer Science Principles With Ms. Nuemann </p>
+  <body>  
+   <center> 
+    <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/gWySFFfAAH_nGFZRCwId_6ZzkaSgGb9rPyqNlzx9u7n/embed?nosource"></iframe>
+      <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/FY5sAVA6PDQlgxY6qyth6ZYh7tIkOG-jaFuT4RC5Mt4/embed"></iframe>
     <center>
-    <iframe width="372" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/gWySFFfAAH_nGFZRCwId_6ZzkaSgGb9rPyqNlzx9u7n/embed?nosource"></iframe>
-       <img src="https://miro.medium.com/max/306/1*JbXe-wn4CivSw6e9GmmFvw.png"
     <center>
-      <iframe width="372" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/FY5sAVA6PDQlgxY6qyth6ZYh7tIkOG-jaFuT4RC5Mt4/embed"></iframe>
+      <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/YhrkNoHKXYRuQut32Mp6EMUnnK6Y1IYw2iF-4cZL3F8/embed"></iframe>
+      <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/JJEZZ01mdPXHkLf7WEUpNauxSOBu5FF4NWP6Rnk8PtE/embed"></iframe>
+    <center>
   <body>
-    
+
 <html>
