--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+   <link rel="stylesheet" href="style.css">
    <h3> Cameron's Portfolio </h3>
         <p> AP Computer Science Principles With Ms. Nuemann </p>
   <body>  
